--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
+    "morgan-body": "^2.6.6",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "validator": "^13.7.0"
