--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "jest": "^28.0.0",
+    "mockingoose": "^2.15.2",
     "mongodb-memory-server": "^8.5.1",
     "nodemon": "^2.0.15"
   },
   "jest": {
     "transform": {
       "^.+\\.[t|j]sx?$": "babel-jest"
-    }
+    },
+    "setupFiles": ["<rootDir>/tests/helpers.js"]
   }
 }
